# RebooTV

./: .gitattributes  .gitignore  README.md  angular.json  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.angular/cache/18.2.21/app/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
src/: app.component.ts  index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/components/category-sidebar/: category-sidebar.component.ts
src/app/components/channel-card/: channel-card.component.ts
src/app/components/channel-details-sidebar/: channel-details-sidebar.component.ts
src/app/components/favorites/: favorites.component.ts
src/app/components/header/: header.component.ts
src/app/components/live-tv/: live-tv.component.ts
src/app/components/notifications/: notifications.component.ts
src/app/components/playlists/: playlists.component.ts
src/app/components/poster-card/: poster-card.component.ts
src/app/components/recently-watched/: recently-watched.component.ts
src/app/components/series/: series.component.ts
src/app/components/series-details/: series-details.component.ts
src/app/components/settings/: settings.component.ts
src/app/components/vod-details-sidebar/: vod-details-sidebar.component.ts
src/app/components/vod-sidebar/: vod-sidebar.component.ts
src/app/models/: iptv.models.ts
src/app/services/: iptv.service.ts  notification.service.ts  settings.service.ts  tauri.service.ts
src/components/category-sidebar/: category-sidebar.component.ts
src/components/channel-card/: channel-card.component.ts
src/components/channel-details-sidebar/: channel-details-sidebar.component.ts
src/components/episode-card/: episode-card.component.ts
src/components/favorites/: favorites.component.ts
src/components/live-tv/: live-tv.component.ts
src/components/movies/: movies.component.ts
src/components/playlist-card/: playlist-card.component.ts
src/components/playlist-list-item/: playlist-list-item.component.ts
src/components/playlists/: playlists.component.ts
src/components/status-banner/: status-banner.component.ts
src/components/vod-details-sidebar/: vod-details-sidebar.component.ts
src/services/: iptv.service.ts  mock-data.ts  tauri.service.ts
